syntax = "proto2";

package tensorflow.profiler;

message PrefixTrieNodeProto {
  repeated bytes terminal_key_ids = 1;
}
